Cambios Entregable 5 Parte 4
Cambios Entregable 5 Parte 4 Css/Html/Js

--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
   </style>
 </head>
 
-<body class="text-center">
+<body class="container-fluid">
   <main class="signin">
     <img src="img/login.png" alt="logo de jovenesaprogramar">
     <div class="col-12">
