--- a/products.html
+++ b/products.html
@@ -12,7 +12,7 @@
   <link href="css/styles.css" rel="stylesheet">
 </head>
 
-<body>
+<body class="container-fluid">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-1">
     <div class="container">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -76,15 +76,20 @@
           <input type="search" id="Busqueda" placeholder="Buscar articulos stock">
         <br> 
           <div class="row container p-0 m-0">
-            <div class="col">
-              <p class="font-weight-normal text-end my-2">Precio</p>
+            <div class="row align-items-center">
+
+              <div class="col-12">
+                <p class="font-weight-normal text-start my-2">Precio</p>
+              </div>
+
+              <div class="col-6">
+                <input class="form-control2" type="number" placeholder="min." id="rangeFilterCountMin">
+              </div>
+              <div class="col-6">
+                <input class="form-control2" type="number" placeholder="máx." id="rangeFilterCountMax">
+              </div>
             </div>
-            <div class="col">
-              <input class="form-control2" type="number" placeholder="min." id="rangeFilterCountMin">
-            </div>
-            <div class="col">
-              <input class="form-control2" type="number" placeholder="máx." id="rangeFilterCountMax">
-            </div>
+
             <div class="col-3 p-0">
               <div class="btn-group" role="group">
                 <button class="btn btn-light btn-block" id="rangeFilterCount">Filtrar</button>
@@ -125,3 +130,4 @@
 </body>
 
 </html>
+
