--- a/product-info.html
+++ b/product-info.html
@@ -33,6 +33,17 @@
           </li>
           <li class="nav-item">
           </li>
+          <li class="nav-item" dropdown> <!--crea desplegable-->
+            <a class="nav-link dropdown-toggle" href="#" id="usuarioDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <!--atributos para que funcione el desplegable-->
+              <span id="usuario"></span> <!--muestra el nombre de usuario-->
+            </a>
+            <div class="dropdown-menu" aria-labelledby="usuarioDropdown"> <!--para las opciones del desplegable-->
+              <a class="dropdown-item" href="cart.html">Mi Carrito</a> <!--redirige a mi carrito--> 
+              <a class="dropdown-item" href="my-profile.html">Mi Perfil</a> <!--redirige a mi perfil-->
+              <div class="dropdown-divider"></div> <!--separa visualmente las opciones-->
+              <a class="dropdown-item" href="#" id="cerrarSesion">Cerrar Sesión</a>
+            </div>
+          </li>
         </ul>
       </div>
     </div>
