--- a/products.html
+++ b/products.html
@@ -53,7 +53,7 @@
   
   <main class="pb-5 container">
     <h1 class="title-products">Productos</h1>
-    <p class="title-products">Verás aquí todos los productos de la categoría Autos.<p>
+    <p class="title-products">Verás aquí todos los productos de la categoría <p>
      
     <!--FILTRO PRECIO -->
 
