--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
       </div>
     </div>
   </nav>
-  <main class="container-fluid">
+  <main class="container-fluid colorindex">
     <div class="jumbotron text-center"></div>
-    <div class="album py-5 bg-light">
+    <div class="album py-5 colorindex">
       <main id="main-display">
         <div id="carouselExampleCaptions" class="carousel slide">
           <div class="carousel-indicators">
@@ -94,7 +94,7 @@
           <br>
           
           <div class="row">
-            <a id="botonmas" class="btn btn-light btn-lg btn-block" href="categories.html">Y mucho más!</a>
+            <a id="botonmas" class="btn btn-dark btn-lg btn-block" href="categories.html">Y mucho más!</a>
           </div>
         </div>
       </main>
@@ -102,7 +102,7 @@
       </div>
     </div>
   </main>
-  <footer class="text-muted">
+  <footer class="text-muted bg-dark">
     <div class="container">
       <p class="float-end">
         <a href="#">Volver arriba</a>
