arreglos conflicto y css

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </div>
     </div>
   </nav>
-  <main class="container-fluid colorindex">
+  <main class="container-fluid bg-dark">
     <div class="jumbotron text-center"></div>
     <div class="album py-5 colorindex">
       <main id="main-display">
