--- a/cart.html
+++ b/cart.html
@@ -36,7 +36,7 @@
     </div>
   </nav>
   <main>
-    <div class="container">
+    <div class="container text-center">
       
     </div>
     <br>
